# nevada-revised-statutes-parser

./: .ghcid  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  nrs-parser.cabal  nv-statutes.cabal  stack.yaml
app/: Main.hs  download-and-parse.sh  download.sh
nrs_files/: styles_site.css
scripts/: download-and-parse.sh
src/: ChapterFile.hs  Config.hs  DateUtil.hs  FileUtil.hs  FileUtils.hs  HtmlUtil.hs  HtmlUtils.hs  IndexFile.hs  Models.hs  NRSParser.hs  NvStatutes.hs  Parsing.hs  SectionParser.hs  SimpleChapterFile.hs  TextUtil.hs  TextUtils.hs  TreeParser.hs  Util.hs  Year.hs
src/Models/: Chapter.hs  NRS.hs  Section.hs  SubChapter.hs  SubChapterChildList.hs  SubSubChapter.hs  Title.hs  Tree.hs
test/: ChapterFileSpec.hs  FileUtilSpec.hs  IndexFileSpec.hs  MiscSpec.hs  NvStatutesSpec.hs  SectionParserSpec.hs  SimpleChapterSpec.hs  TextUtilSpec.hs  ZChapterFileSpec.hs
test/Models/: SectionSpec.hs
test/fixtures/: NRS-000.html  NRS-001.html  NRS-036.html  NRS-432B.html  NRS_ CHAPTER 1 - JUDICIAL DEPARTMENT GENERALLY.htm  index.html  nrs-432b.html  nrs.html
