cabal-version:       2.2
name:                nrs-parser
version:             0.1.0.0
synopsis:            Scraper and parser for the Nevada Revised Statutes
description:         Please see README.md
homepage:            https://github.com/public-law/nevada-revised-statutes-parser#readme
author:              Robb Shecter
maintainer:          robb@public.law
copyright:           All rights reserved
category:            Web
build-type:          Simple
extra-source-files:  README.md

common options
  default-extensions:  NoImplicitPrelude, UnicodeSyntax, DeriveGeneric, DuplicateRecordFields, FlexibleContexts, GeneralizedNewtypeDeriving, MultiWayIf, OverloadedStrings, QuasiQuotes
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror -Wall -Wimplicit-prelude -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wredundant-constraints -Wno-type-defaults

common deps
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    aeson-pretty,
    attoparsec,
    base-unicode-symbols,
    basic-prelude,
    bytestring,
    directory,
    filepath,
    hspec,
    interpolatedstring-perl6,
    parsers,
    process,
    split,
    string-conversions,
    tagsoup,
    text,
    time,
    unordered-containers
  other-modules:
    ChapterFile,
    Config,
    DateUtil,
    FileUtil,
    IndexFile,
    HtmlUtil,
    Models.Chapter,
    Models.NRS,
    Models.Section,
    Models.SubChapter,
    Models.SubSubChapter,
    Models.Title,
    Models.Tree,
    NRSParser,
    SectionParser,
    SimpleChapterFile,
    TextUtil,
    TreeParser,
    Util,
    Year



test-suite nrs-parser-test
  import:              deps, options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  other-modules:       ChapterFileSpec
                     , IndexFileSpec
                     , Models.SectionSpec
                     , SectionParserSpec
                     , SimpleChapterSpec
                     , TextUtilSpec


executable nrs-parser-exe
  import:              deps, options
  hs-source-dirs:      src, app
  main-is:             Main.hs


source-repository head
  type:     git
  location: https://github.com/public-law/nevada-revised-statutes-parser

