name:                nv-statutes
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dogweather/nv-statutes#readme
license:             BSD3
license-file:        LICENSE
author:              Robb Shecter
maintainer:          robb@weblaws.org
copyright:           All rights reserved
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, UnicodeSyntax

executable nv-statutes-exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , attoparsec
                     , base-unicode-symbols
                     , nv-statutes
                     , basic-prelude
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , parsers
                     , tagsoup
                     , split
                     , string-conversions
                     , text
                     , time
  other-modules:       NvStatutes, Models, Year, HtmlUtils
  default-extensions:  NoImplicitPrelude, UnicodeSyntax

test-suite nv-statutes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , attoparsec
                     , base-unicode-symbols
                     , nv-statutes
                     , basic-prelude
                     , aeson
                     , hspec
                     , tagsoup
                     , parsers
                     , split
                     , string-conversions
                     , text
                     , time
  other-modules:       NvStatutesSpec, NvStatutes, Models, Year, HtmlUtils
  default-extensions:  NoImplicitPrelude, UnicodeSyntax

source-repository head
  type:     git
  location: https://github.com/dogweather/nv-statutes
