name:                nv-statutes
version:             0.1.0.0
synopsis:            Scraper and parser for the Nevada Revised Statutes
description:         Please see README.md
homepage:            https://github.com/dogweather/nevada-revised-statutes-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Robb Shecter
maintainer:          robb@weblaws.org
copyright:           All rights reserved
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     IndexFile
                     , ChapterFile
                     , FileUtil
                     , HtmlUtil
                     , Models.Chapter
                     , Models.Section
                     , Models.SubChapter
                     , Models.SubSubChapter
                     , Models.Title
                     , TextUtil
                     , Year
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude, UnicodeSyntax, DuplicateRecordFields
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , base-unicode-symbols
                     , basic-prelude
                     , bytestring
                     , hspec
                     , parsers
                     , process
                     , split
                     , string-conversions
                     , tagsoup
                     , text
                     , time


test-suite nv-statutes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  NoImplicitPrelude, UnicodeSyntax, DuplicateRecordFields
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:       basic-prelude
                       , hspec
                       , interpolatedstring-perl6
                       , nv-statutes
                       , text
                       , tagsoup
  other-modules:       ChapterFileSpec, IndexFileSpec, TextUtilSpec


executable nv-statutes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, UnicodeSyntax, DuplicateRecordFields
  build-depends:       basic-prelude
                       , aeson-pretty
                       , base
                       , base-unicode-symbols
                       , bytestring
                       , hspec
                       , nv-statutes
                       , text


source-repository head
  type:     git
  location: https://github.com/dogweather/nevada-revised-statutes-parser
